--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "react/button-has-type": "off",
     "react/react-in-jsx-scope": "off",
     "no-console": "off",
+    "react/prop-types": "off",
     // allow jsx syntax in js files (for next.js project)
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     //should add ".ts" if typescript project
